kubernetes/apps/networking/ingresses/ingressRoutes/readarr/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name readarr
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`readarr.${SECRET_DOMAIN}`)
      middlewares:
        - name: headers
          namespace: networking
        - name: authelia
          namespace: networking
      services:
        - name: *name
          port: 8787
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME}-prod-tls
